# groq_api

./: Makefile  README.md  pyproject.toml
src/: groq_client.py  main.py
